# Project

./: CMakeLists.txt  README.en.md  README.md  VIE.cpp
AB/: mqueue.h  ptreate.cpp  ptreate.h  uds.h
AB/bnlc/: gpm.cpp  gpm.h
AB/mthread/: cthread.cpp  cthread.h  tpool.h
conf/cfg/: config.json
conf/table/: offset_table.json
module/camera/: camera.h  camerafactory.h  dhcam.cpp  dhcam.h  hikcam.cpp  hikcam.h
module/common/: header.h  utils.cpp  utils.h
module/cserial/: cserial.cpp  cserial.h
module/json/: json.cpp  json.h
module/logger/: logger.cpp  logger.h
module/msgqueue/: mqtest.h
module/operation/: operation.cpp  operation.h
module/optjson/: config.cpp  config.h  offsettable.cpp  offsettable.h  templatejson.cpp  templatejson.h
module/predict/: nn.cpp  nn.h
module/ptreate/: pt_allocator.cpp  pt_allocator.h  pt_logic.cpp  pt_logic.h  pt_operator.cpp  pt_operator.h
module/socket/: socket.cpp  socket.h
module/validity/: validity.cpp  validity.h
